PIM-6473: Fix scroll issue on firefox, flex-direction is already present on parent element

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
@@ -1774,7 +1774,6 @@ h3.tab-header {
   .modal-body {
     flex: 1;
     display: flex;
-    flex-direction: column;
   }
 }
 
